@@ -1,5 +1,8 @@
 Changes for Devel-Declare
 
+  - clean up checks for whether we're lexing and whether lex_stuff exists
+    to handle the PL_parser factor-out in 5.10
+
 0.002000
   - rewrite guts into perl, add tests for new declaration style
 
